tests/ui/moves/issue-72649-uninit-in-loop.stderr
error[E0382]: use of moved value: `value`
  --> $DIR/issue-72649-uninit-in-loop.rs:20:22
   |
LL |         let value = NonCopy{};
   |             ----- move occurs because `value` has type `NonCopy`, which does not implement the `Copy` trait
LL |
LL |         let _used = value;
   |                     ----- value moved here
LL |
LL |         let _used2 = value;
   |                      ^^^^^ value used here after move

error[E0382]: use of moved value: `value`
  --> $DIR/issue-72649-uninit-in-loop.rs:32:26
   |
LL |     let value = NonCopy{};
   |         ----- move occurs because `value` has type `NonCopy`, which does not implement the `Copy` trait
LL |
LL |     loop {
   |     ---- inside of this loop
LL |         let _used = value;
   |                     ----- value moved here
...
LL |             let _used2 = value;
   |                          ^^^^^ value used here after move

error[E0382]: use of moved value: `value`
  --> $DIR/issue-72649-uninit-in-loop.rs:42:21
   |
LL |     let value = NonCopy{};
   |         ----- move occurs because `value` has type `NonCopy`, which does not implement the `Copy` trait
LL |
LL |     loop {
   |     ---- inside of this loop
LL |         let _used = value;
   |                     ^^^^^ value moved here, in previous iteration of loop

error[E0382]: use of moved value: `value`
  --> $DIR/issue-72649-uninit-in-loop.rs:53:22
   |
LL |     let mut value = NonCopy{};
   |         --------- move occurs because `value` has type `NonCopy`, which does not implement the `Copy` trait
...
LL |     loop {
   |     ---- inside of this loop
LL |         let _used2 = value;
   |                      ^^^^^ value moved here, in previous iteration of loop

error[E0381]: used binding `value` isn't initialized
  --> $DIR/issue-72649-uninit-in-loop.rs:61:21
   |
LL |         let value: NonCopy;
   |             ----- binding declared here but left uninitialized
LL |         let _used = value;
   |                     ^^^^^ `value` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |         let value: NonCopy = todo!();
   |                            +++++++++

error[E0381]: used binding `value` isn't initialized
  --> $DIR/issue-72649-uninit-in-loop.rs:69:21
   |
LL |     let mut value: NonCopy;
   |         --------- binding declared here but left uninitialized
LL |     loop {
LL |         let _used = value;
   |                     ^^^^^ `value` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let mut value: NonCopy = todo!();
   |                            +++++++++

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0381, E0382.
For more information about an error, try `rustc --explain E0381`.
